Fix unit test linking and httplib

--- a/src/unit_tests/remoted/CMakeLists.txt
+++ b/src/unit_tests/remoted/CMakeLists.txt
@@ -17,7 +17,10 @@ set_target_properties(
     LINKER_LANGUAGE C
 )
 
-target_link_libraries(REMOTED_O ${WAZUHLIB} ${WAZUHEXT} -lpthread)
+link_directories(${SRC_FOLDER}/build/shared_modules/router)
+include_directories(${SRC_FOLDER}/shared_modules/router/include)
+
+target_link_libraries(REMOTED_O ${WAZUHLIB} ${WAZUHEXT} -lpthread -lrouter)
 
 #include wrappers
 include(${SRC_FOLDER}/unit_tests/wrappers/wazuh/shared/shared.cmake)
