--- a/src/engine/benchmark/logicExpression/CMakeLists.txt
+++ b/src/engine/benchmark/logicExpression/CMakeLists.txt
@@ -1,6 +1,5 @@
-# TODO update
-# add_executable(logicExpression_benchmarks
-#   logicExpressionEvaluator_bench.cpp
-# )
+add_executable(logicExpression_benchmarks
+  evaluator_bench.cpp
+)
 
-# target_link_libraries(logicExpression_benchmarks benchmark::benchmark_main logicexpr)
+target_link_libraries(logicExpression_benchmarks benchmark::benchmark_main logicexpr)
