Added syscollector flatbuffers

--- a/src/wazuh_modules/syscollector/CMakeLists.txt
+++ b/src/wazuh_modules/syscollector/CMakeLists.txt
@@ -10,6 +10,7 @@ endif()
 
 get_filename_component(SRC_FOLDER     ${CMAKE_SOURCE_DIR}/../../ ABSOLUTE)
 get_filename_component(FLATBUFFERS_FOLDER ${CMAKE_SOURCE_DIR}/schemas/ ABSOLUTE)
+get_filename_component(FLATBUFFERS_FOLDER ${CMAKE_SOURCE_DIR}/flatbuffers/ ABSOLUTE)
 get_filename_component(FLATC_PATH ${SRC_FOLDER}/external/flatbuffers/build/ ABSOLUTE)
 
 if(CMAKE_SYSTEM_NAME STREQUAL "HP-UX")
@@ -138,6 +139,31 @@ elseif(UNIX AND NOT APPLE)
     string(APPEND CMAKE_SHARED_LINKER_FLAGS " -Wl,-rpath=$ORIGIN")
   endif(NOT CMAKE_SYSTEM_NAME STREQUAL "AIX")
 endif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+
+if (NOT ${TARGET} STREQUAL "")
+  if(${TARGET} STREQUAL "server")
+    list(APPEND Schemas
+                netiface_deltas
+                netproto_deltas
+                netaddr_deltas
+                osinfo_deltas
+                hwinfo_deltas
+                ports_deltas
+                programs_deltas
+                hotfixes_deltas
+                processes_deltas
+    )
+
+    foreach(schema IN LISTS Schemas)
+    set(FBS_FILE "${FLATBUFFERS_FOLDER}/${schema}.fbs")
+    add_custom_target(${schema}_target
+    COMMAND ${FLATC_PATH}/flatc -c -o ${CMAKE_SOURCE_DIR}/include/ ${FBS_FILE}
+    COMMENT "Executing flatc to generate ${schema} header file."
+    )
+    add_dependencies(${PROJECT_NAME} ${schema}_target)
+    endforeach()
+  endif()
+endif()
 
 if(NOT CMAKE_SYSTEM_NAME STREQUAL "AIX")
   target_link_libraries(syscollector dbsync rsync sysinfo wazuhext)
