--- a/api/test/integration/test_rule_endpoints.tavern.yaml
+++ b/api/test/integration/test_rule_endpoints.tavern.yaml
@@ -1829,6 +1829,28 @@ stages:
           total_failed_items: 0
         error: 0
 
+  - name: Upload new valid rule in custom subdir
+    request:
+      verify: False
+      url: "{protocol:s}://{host:s}:{port:d}/rules/files/new_rule.xml"
+      method: PUT
+      data: "{new_rules:s}"
+      headers:
+        Authorization: "Bearer {test_login_token}"
+        content-type: application/octet-stream
+      params:
+        relative_dirname: 'etc/rules/subdir'
+    response:
+      status_code: 200
+      json:
+        data:
+          affected_items:
+            - 'etc/rules/subdir/new_rule.xml'
+          failed_items: []
+          total_affected_items: 1
+          total_failed_items: 0
+        error: 0
+
   - name: Upload same rule (overwrite=False)
     request:
       verify: False
@@ -1922,6 +1944,26 @@ stages:
         data:
           affected_items:
             - "etc/rules/new_rule.xml"
+          total_affected_items: 1
+          failed_items: []
+          total_failed_items: 0
+        error: 0
+
+  - name: Delete user rule in subdir
+    request:
+      verify: False
+      url: "{protocol:s}://{host:s}:{port:d}/rules/files/new_rule.xml"
+      method: DELETE
+      headers:
+        Authorization: "Bearer {test_login_token}"
+      params:
+        relative_dirname: 'etc/rules/subdir'
+    response:
+      status_code: 200
+      json:
+        data:
+          affected_items:
+            - "etc/rules/subdir/new_rule.xml"
           total_affected_items: 1
           failed_items: []
           total_failed_items: 0
