Add agents allow_higher_versions API configuration

--- a/api/api/configuration/api.yaml
+++ b/api/api/configuration/api.yaml
@@ -69,3 +69,7 @@
 #   limits:
 #     eps:
 #       allow: yes
+#   agents:
+#     allow_higher_versions:
+#       allow: yes
+#       exceptions: []
