--- a/api/test/integration/test_cluster_endpoints.tavern.yaml
+++ b/api/test/integration/test_cluster_endpoints.tavern.yaml
@@ -990,6 +990,10 @@ stages:
                   limits:
                     eps:
                       allow: !anybool
+                  agents:
+                    allow_higher_versions:
+                      allow: !anybool
+                      exceptions: !anything
             - node_name: "worker1"
               node_api_config:
                 <<: *default_api_config
