--- a/api/test/integration/test_manager_endpoints.tavern.yaml
+++ b/api/test/integration/test_manager_endpoints.tavern.yaml
@@ -963,6 +963,10 @@ stages:
                   limits:
                     eps:
                       allow: !anybool
+                  agents:
+                    allow_higher_versions:
+                      allow: !anybool
+                      exceptions: !anything
           total_affected_items: 1
           total_failed_items: 0
           failed_items: []
