Added engine-clear python script and Qol changes

--- a/src/engine/tools/engine-suite/setup.cfg
+++ b/src/engine/tools/engine-suite/setup.cfg
@@ -30,6 +30,7 @@ console_scripts =
     engine-schema = engine_schema.__main__:main
     engine-decoder = engine_decoder.__main__:main
     engine-integration = engine_integration.__main__:main
+    engine-clear = engine_clear.__main__:main
 
 [options.extras_require]
 dev =
