--- a/ruleset/sca/rhel/8/rework-cis_rhel8_linux.yml
+++ b/ruleset/sca/rhel/8/rework-cis_rhel8_linux.yml
@@ -4,8 +4,8 @@
 #
 # This program is free software; you can redistribute it
 # and/or modify it under the terms of the GNU General Public
-# License (version 2) as published by the FSF - Free Software
-# Foundation
+# License (version 2) as published by the FSF - Free Software Foundation
+# 
 #
 # Based on:
 # Center for Internet Security Red Hat Enterprise Linux 8 Benchmark v2.0.0 - 02-23-2022
