--- a/.github/workflows/rtr_syscollector.yml
+++ b/.github/workflows/rtr_syscollector.yml
@@ -18,7 +18,7 @@ jobs:
           fail-fast: false
           matrix:
               module: [wazuh_modules/syscollector, shared_modules/dbsync, shared_modules/rsync, data_provider]
-              target: [agent, winagent]
+              target: [server, agent, winagent]
     # We don't use ubuntu-latest because the install_build_deps action adds a fixed repository for Wine
     runs-on: ubuntu-22.04
     steps:
