Added agent info table

--- a/src/wazuh_modules/syscollector/CMakeLists.txt
+++ b/src/wazuh_modules/syscollector/CMakeLists.txt
@@ -153,6 +153,7 @@ if (NOT ${TARGET} STREQUAL "")
                           hotfixes_data
                           processes_data
                           syscollector_deltas
+                          common_agentInfo
     )
 
     foreach(schema IN LISTS Schemas)
