--- a/.github/actions/clang_format/action.yml
+++ b/.github/actions/clang_format/action.yml
@@ -19,6 +19,7 @@ runs:
           version: 1.0
 
       - name: Check codding style
+        shell: bash
         run: |
 
           # Execute in dry-run and fail on warnings
@@ -29,12 +30,21 @@ runs:
           sourceFiles=$(find ${{ inputs.path }} -type f \( -name "*.cpp" -o -name "*.hpp" \) | tr '\n' ' ')
           arguments+="-i $sourceFiles "
 
-          echo "Executing: clang-format $arguments"
-          clang-format $arguments
+          ERRORS_FILE=${{ inputs.path }}/clang_format_errors.txt
+          clang-format $arguments 2> ${ERRORS_FILE}
 
-          if [[ $? -ne 0 ]]; then
-            echo "Codding style check failed"
-            # exit 1
+          # Check if there are errors
+          if [ -s "${ERRORS_FILE}" ]; then
+            echo "Clang-format errors found"
+            exit 1
+          else
+            echo "Clang-format check passed successfully"
           fi
 
-        shell: bash
+      # Upload errors as an artifact, when failed
+      - uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: Clang-format errors
+          path: ${{ inputs.path }}/clang_format_errors.txt
+          retention-days: 1
