MSGraph API IT: valid/invalid resource

--- a/tests/integration/test_msgraph/test_API/data/config_templates/config_API.yaml
+++ b/tests/integration/test_msgraph/test_API/data/config_templates/config_API.yaml
@@ -26,9 +26,11 @@
         - resource:
             elements:
               - name:
-                  value: 'resource_name'
+                  value: 'RESOURCE_NAME'
               - relationship:
-                  value: 'resource_relationship'
+                  value: 'RESOURCE_RELATIONSHIP1'
+              - relationship:
+                  value: 'RESOURCE_RELATIONSHIP2'
 
     - section: sca
       elements:
