MSGraph API IT: valid/invalid auth
Co-authored-by: lsayanes <lsayanes@wazuh.com>

--- a/tests/integration/test_msgraph/test_API/data/config_templates/config_API.yaml
+++ b/tests/integration/test_msgraph/test_API/data/config_templates/config_API.yaml
@@ -16,7 +16,7 @@
         - api_auth:
             elements:
               - tenant_id:
-                  value: 'tenant_id'
+                  value: 'TENANT_ID'
               - client_id:
                   value: 'client_id'
               - secret_value:
