--- a/ruleset/sca/rhel/8/cis_rhel8_linux.yml
+++ b/ruleset/sca/rhel/8/cis_rhel8_linux.yml
@@ -28,6 +28,8 @@ requirements:
     - "f:/etc/redhat-release -> r:^Oracle && r:release 8"
     - "f:/etc/redhat-release -> r:^Better && r:release 8"
     - "f:/etc/redhat-release -> r:^OpenVZ && r:release 8"
+    - "f:/etc/redhat-release -> r:^AlmaLinux && r:release 8"
+    - "f:/etc/redhat-release -> r:^Rocky Linux && r:release 8"
 
 variables:
   $sshd_file: /etc/ssh/sshd_config
