--- a/ruleset/sca/rhel/9/cis_rhel9_linux.yml
+++ b/ruleset/sca/rhel/9/cis_rhel9_linux.yml
@@ -28,6 +28,8 @@ requirements:
     - "f:/etc/redhat-release -> r:^Oracle && r:release 9"
     - "f:/etc/redhat-release -> r:^Better && r:release 9"
     - "f:/etc/redhat-release -> r:^OpenVZ && r:release 9"
+    - "f:/etc/redhat-release -> r:^AlmaLinux && r:release 9"
+    - "f:/etc/redhat-release -> r:^Rocky Linux && r:release 9"
 
 variables:
   $sshd_file: /etc/ssh/sshd_config
