--- a/ruleset/sca/centos/8/cis_centos8_linux.yml
+++ b/ruleset/sca/centos/8/cis_centos8_linux.yml
@@ -24,6 +24,8 @@ requirements:
   condition: any
   rules:
     - "f:/etc/redhat-release -> r:^Centos && r:release 8"
+    - "f:/etc/redhat-release -> r:^AlmaLinux && r:release 8"
+    - "f:/etc/redhat-release -> r:^Rocky Linux && r:release 8"
 
 variables:
   $sshd_file: /etc/ssh/sshd_config
