Add requested changes on PR Review.

--- a/src/shared_modules/utils/tests/CMakeLists.txt
+++ b/src/shared_modules/utils/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ file(GLOB UTIL_CXX_UNITTEST_COMMON_SRC
     "threadDispatcher_test.cpp"
     "threadSafeQueue_test.cpp"
     "timeHelper_test.cpp"
+    "globHelper_test.cpp"
     "main.cpp"
 )
 
